--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "homepage": "https://Emil-Bayramov.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@fransvilhelm/hooks": "^3.1.4",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.1",
+    "scroll": "^3.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
